--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
+    "antd-img-crop": "^4.21.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.9.1",
     "dotenv": "^16.3.1",
