--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.1",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.25",
     "mime": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
