--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.1",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.11",
     "framer-motion": "^11.0.25",
     "mime": "^4.0.1",
     "react": "^18.2.0",
