--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.0.1",
-    "antd": "^5.13.1",
+    "antd": "^5.18.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.0.25",
@@ -38,6 +38,7 @@
     "css-loader": "^6.9.1",
     "dotenv": "^16.3.1",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
