--- a/package.json
+++ b/package.json
@@ -12,35 +12,35 @@
   "author": "GetLocals",
   "license": "ISC",
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
-    "@ant-design/react-native": "^5.0.5",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@reduxjs/toolkit": "^2.0.1",
-    "antd": "^5.13.1",
-    "clsx": "^2.1.0",
+    "@ant-design/icons": "^5.3.7",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.1",
+    "@reduxjs/toolkit": "^2.2.5",
+    "animate.css": "^4.1.1",
+    "antd": "^5.18.1",
     "dayjs": "^1.11.11",
-    "framer-motion": "^11.0.25",
-    "mime": "^4.0.1",
+    "mime": "^4.0.3",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.2",
-    "tailwind-merge": "^2.2.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-react": "^7.23.3",
-    "antd-img-crop": "^4.21.0",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "antd-img-crop": "^4.22.0",
     "babel-loader": "^9.1.3",
-    "css-loader": "^6.9.1",
-    "dotenv": "^16.3.1",
+    "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
     "html-webpack-plugin": "^5.6.0",
-    "style-loader": "^3.3.4",
-    "webpack": "^5.90.3",
+    "mini-css-extract-plugin": "^2.9.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.0.4"
   }
 }
